Bug 343077 - Find Again toolbarbutton doesn't switch back to normal-find if the findbar is opened after links TAF. r=masayuki.